--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Phage Therapy Simulation-Discrete Events : A discrete event model that simulates interactions between co-inhabiting populations of bacteriophage lambda and bacteria.">
+    <meta name="description" content="Phage Therapy Simulation: A discrete event model that simulates interactions between co-inhabiting populations of bacteriophage lambda and bacteria.">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Phage Therapy Simulation-Discrete Events</title>
+    <title>Phage Therapy Simulation</title>
   </head>
 
   <body>
@@ -34,14 +34,21 @@
         <h3>
 <a id="description" class="anchor" href="#description" aria-hidden="true"><span class="octicon octicon-link"></span></a>Description</h3>
 
-<p>This is a discrete event model that has been developed to computationally simulate the many interactions that occur between co-inhabiting populations of bacteriophage lambda and bacteria. Model qualifications are under review for scientific publication.</p>
+<p>This is a discrete event model that has been developed to computationally simulate the many interactions that occur between co-inhabiting populations of bacteriophage lambda and bacteria.</p>
+
+<h3>Key Words</h3>
+Simulations<br />
+Ecosystem Sciences<br />
+Bio-Informatics<br />
+Medical Science Apps<br />
+
       </section>
     </div>
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Phage Therapy Simulation-Discrete Events maintained by <a href="https://github.com/parkermills">parkermills</a></p>
+        <p class="copyright">Phage Therapy Simulation maintained by <a href="https://github.com/parkermills">parkermills</a></p>
         <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
