--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/parkermills/phagetherapy">View on GitHub</a>
 
-          <h1 id="project_title">Phage Therapy Simulation-Discrete Events</h1>
+          <h1 id="project_title">Phage Therapy Simulation</h1>
           <h2 id="project_tagline">A discrete event model that simulates interactions between co-inhabiting populations of bacteriophage lambda and bacteria.</h2>
 
             <section id="downloads">
